some additional changes

--- a/notebook-1.ipynb
+++ b/notebook-1.ipynb
@@ -280,10 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f0b64ac7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Library Management System:\n",
+      "Alice Cooper has borrowed Python Programming\n",
+      "Alice Cooper has borrowed Data Structures\n",
+      "Cannot borrow book - limit reached or book unavailable\n",
+      "Dr. Robert Brown has borrowed Algorithms\n"
+     ]
+    }
+   ],
    "source": [
     "class Book:\n",
     "    def __init__(self, title, author, isbn):\n",
@@ -351,14 +363,6 @@
     "\n",
     "faculty.borrow_book(book3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baa64e43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
