teaching kanishk basics of python

--- a/notebook-1.ipynb
+++ b/notebook-1.ipynb
@@ -363,6 +363,27 @@
     "\n",
     "faculty.borrow_book(book3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "de439209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your height is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"enter your height:\"))\n",
+    "b=int(input(\"enter your name\"))\n",
+    "\n",
+    "print(\"your height is\",a)"
+   ]
   }
  ],
  "metadata": {
